--- a/index.html
+++ b/index.html
@@ -153,19 +153,15 @@
     <div class="container is-max-desktop">
       <div class="hero-body">
         <div class="is-three-quarters" style="display:block; margin: auto;">
-          <div class="publication-video" style="padding-bottom: 75%">
+          <div class="publication-video" style="padding-bottom: 35%">
             <center>
             <video id="teaser" autoplay controls muted loop playsinline height="100%">
-              <source src="https://storage.googleapis.com/dm-tapnet/robotap/videos/robotap%20banner%20video%20trimmed.mp4" type="video/mp4">
+              <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/teaser.mp4" type="video/mp4">
             </video>
           </div>
         </div>
         <p class="has-text-centered" style="max-width: 640px">
-          <span class="dnerf">BootsTAP</span> solves stencil insertion (and many other tasks) from 6
-          demonstrations or less, without CAD models or prior experience with the objects.  It does
-          this by using DeepMind's novel point tracking algorithm <a href="https://deepmind-tapir.github.io/">TAPIR</a>.  At every moment,
-          it detects points on objects which matter most to the action (<font color="red">red</font>), infers where those points
-          should move to (<font color="cyan">cyan</font>), and computes an action that moves them there (<font color="orange">orange arrow</font>).
+          <span class="dnerf">BootsTAP</span> tracks points much reliably over longer sequences.
         </p>
       </div>
     </div>
@@ -194,7 +190,7 @@
           <h2 class="title is-3">Video Summary</h2>
           <div class="publication-video">
             <video id="summary" playsinline controls muted height="100%">
-              <source src="https://storage.googleapis.com/dm-tapnet/robotap/videos/summary_video_v6.mp4"
+              <source src="https://storage.googleapis.com/dm-tapnet/robotap/https://storage.googleapis.com/dm-tapnet/bootstap/videos/summary_video_v6.mp4"
                 type="video/mp4">
             </video>
           </div>
@@ -231,7 +227,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/nist/large_scale_change.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/nist/large_scale_change.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -255,7 +251,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/nist/textureless_regions.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/nist/textureless_regions.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -279,7 +275,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/nist/lighting_invariance.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/nist/lighting_invariance.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -302,7 +298,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/nist/occlusion_invariance.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/nist/occlusion_invariance.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -326,7 +322,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/nist/sudden_fast_motion.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/nist/sudden_fast_motion.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -348,7 +344,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/nist/large_motion_small_object.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/nist/large_motion_small_object.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -371,7 +367,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/nist/complex_motion.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/nist/complex_motion.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -422,7 +418,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" id="377" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/libero/task_1_24.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/libero/task_1_24.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -444,7 +440,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" id="377" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/libero/task_1_73.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/libero/task_1_73.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -466,7 +462,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" id="377" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/libero/task_1_21.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/libero/task_1_21.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -489,7 +485,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" id="377" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/libero/task_1_72.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/libero/task_1_72.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -511,7 +507,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" id="377" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/libero/task_1_61.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/libero/task_1_61.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -533,7 +529,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" id="377" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/libero/task_1_46.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/libero/task_1_46.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -581,7 +577,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/davis/scooter-black_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/davis/scooter-black_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -608,7 +604,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/davis/dance-twirl_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/davis/dance-twirl_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -638,7 +634,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/davis/camel_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/davis/camel_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -666,7 +662,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/davis/loading_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/davis/loading_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -692,7 +688,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/davis/paragliding-launch_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/davis/paragliding-launch_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -718,7 +714,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/davis/lab-coat_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/davis/lab-coat_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -766,7 +762,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" id="377" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/robotap/plush1-robot0_camera1_rgb_img_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/robotap/plush1-robot0_camera1_rgb_img_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -791,7 +787,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" id="377" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/robotap/shoe_colors-sawyer_camera2_rgb_img_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/robotap/shoe_colors-sawyer_camera2_rgb_img_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -816,7 +812,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" id="377" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/robotap/nist_board1-robot0_camera2_rgb_img_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/robotap/nist_board1-robot0_camera2_rgb_img_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -841,7 +837,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" id="377" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/robotap/gear_v2_16-basket_front_right_rgb_img-1_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/robotap/gear_v2_16-basket_front_right_rgb_img-1_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
@@ -867,7 +863,7 @@
                   </table>
                   <!-- <figure class="image is-16by9 is-covered"> -->
                   <video style="width: 100%;" poster="" id="377" autoplay controls muted loop playsinline height="100%">
-                    <source src="videos/robotap/gearsblocks1-wrist_back_rgb_img_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
+                    <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/robotap/gearsblocks1-wrist_back_rgb_img_gt_vs_bootstapir_vs_tapir.mp4" type="video/mp4">
                   </video>
                   <!-- </figure> -->
                 </div>
