Add teaser video with captions/

--- a/index.html
+++ b/index.html
@@ -153,16 +153,13 @@
     <div class="container is-max-desktop">
       <div class="hero-body">
         <div class="is-three-quarters" style="display:block; margin: auto;">
-          <div class="publication-video" style="padding-bottom: 35%">
-            <center>
-            <video id="teaser" autoplay controls muted loop playsinline height="100%">
-              <source src="https://storage.googleapis.com/dm-tapnet/bootstap/videos/teaser.mp4" type="video/mp4">
+          <div class="publication-video" >
+            <video id="teaser" controls loop playsinline height="100%">
+              <source src="https://storage.googleapis.com/dm-tapnet/bootstap/bootstap_summary_trim2.mkv" type="video/mp4">
+              <track label="English" kind="subtitles" srclang="en" src="bootstap_summary_trim2.vtt" default />
             </video>
           </div>
         </div>
-        <p class="has-text-centered" style="max-width: 640px">
-          <span class="dnerf">BootsTAP</span> tracks points much reliably over longer sequences.
-        </p>
       </div>
     </div>
   </section>
