--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/pdf/2402.00847" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://storage.googleapis.com/dm-tapnet/bootstap/BootsTAP_pre_arxiv_v2.pdf" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
-                    <span>Paper</span>
+                    <span>Paper (v2)</span>
                   </a>
                 </span>
                 <span class="link-block">
@@ -129,7 +129,7 @@
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
-                    <span>arXiv</span>
+                    <span>arXiv (old)</span>
                   </a>
                 </span>
                 <span class="link-block">
@@ -190,7 +190,7 @@
           <h2 class="title is-3">Video Summary</h2>
           <div class="publication-video">
             <video id="summary" playsinline controls muted height="100%">
-              <source src="https://storage.googleapis.com/dm-tapnet/bootstap/bootstap_summary_trim2.mkv" type="video/mp4">
+              <source src="https://storage.googleapis.com/dm-tapnet/bootstap/bootstap_summary_trim2.mkv" type="video/mkv">
               <track label="English" kind="subtitles" srclang="en" src="bootstap_summary_trim2.vtt" default />
             </video>
           </div>
