add colab demo link

--- a/index.html
+++ b/index.html
@@ -141,6 +141,15 @@
                     <span>BootsTAP checkpoints</span>
                   </a>
                 </span>
+                <span class="link-block">
+                  <a href="https://github.com/google-deepmind/tapnet?tab=readme-ov-file#colab-demo"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fab fa-github"></i>
+                    </span>
+                    <span>Colab Demos</span>
+                  </a>
+                </span> 
               </div>
             </div>
           </div>
