--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <h2 class="title is-3">Video Summary</h2>
           <div class="publication-video">
             <video id="summary" playsinline controls muted height="100%">
-              <source src="https://storage.googleapis.com/dm-tapnet/bootstap/bootstap_summary_trim2.mkv" type="video/mp4">
+              <source src="https://storage.googleapis.com/dm-tapnet/bootstap/bootstap_summary_trim2_1.mp4" type="video/mp4">
               <track label="English" kind="subtitles" srclang="en" src="bootstap_summary_trim2.vtt" default />
             </video>
           </div>
