update arxiv link

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a href="https://storage.googleapis.com/dm-tapnet/bootstap/BootsTAP_pre_arxiv_v2.pdf" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://arxiv.org/pdf/2402.00847.pdf" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
-                    <span>Paper (v2)</span>
+                    <span>Paper</span>
                   </a>
                 </span>
                 <span class="link-block">
