remove 'old' from link

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
-                    <span>arXiv (old)</span>
+                    <span>arXiv</span>
                   </a>
                 </span>
                 <span class="link-block">
