small update website

--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
                 <a href="https://skoppula.com/">Skanda Koppula</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="https://ankushgupta.org/">Ankush Gupta</a><sup>1</sup>
+                <a href="https://ankushgupta.org/">Ankush Gupta</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=kbqjyGQAAAAJ">Joseph Heyward</a><sup>1</sup>
+                <a href="https://scholar.google.com/citations?user=kbqjyGQAAAAJ">Joseph Heyward</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="https://www.irocco.info/">Ignacio Rocco</a><sup>1</sup>
+                <a href="https://www.irocco.info/">Ignacio Rocco</a><sup>1</sup>,
               </span>              
               <span class="author-block">
-                <a href="https://goroshin.github.io/">Ross Goroshin</a><sup>1</sup>
+                <a href="https://goroshin.github.io/">Ross Goroshin</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="https://joao.ai/">João Carreira</a><sup>1</sup>
+                <a href="https://joao.ai/">João Carreira</a><sup>1</sup>,
               </span>
               <span class="author-block">
                 <a href="https://www.robots.ox.ac.uk/~az/">Andrew Zisserman</a><sup>1,2</sup>
@@ -110,7 +110,7 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block"><sup>1</sup>Google DeepMind,</span>
-              <span class="author-block"><sup>2</sup>VGG, Department of Engineering Science, University of Oxford</span>
+              <span class="author-block"><sup>2</sup>University of Oxford</span>
             </div>
 
             <div class="has-text-centered">
@@ -707,7 +707,7 @@
       <div class="is-centered has-text-centered">
         <div class="is-four-fifths">
           <h2 class="title is-3">Video Comparisons</h2>
-          <div class="hero-body-justified"><b>RoboCAT-Nist:</b> In this study, we apply both TAPIR (left) and BootsTAPIR (right) to very
+          <div class="hero-body-justified"><b>RoboCAT-NIST:</b> In this study, we apply both TAPIR (left) and BootsTAPIR (right) to very
             challenging sequences of NIST gear insertion, as viewed from the gripper camera. Due to the lack of texture
             and the rotational symmetry, the correspondence is difficult to perceive, leading to many failures from the original
             TAPIR model. We manually select query points on the gears by automatically selecting a grid of red pixels on
