--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
             </a>            
             <a class="navbar-item" href="https://deepmind-tapir.github.io/blogpost.html">
               TAPIR Blog Post
-            </a>            
+            </a>
+            <a class="navbar-item" href="https://tapvid3d.github.io/">
+              TAPVid-3D
+            </a>      
           </div>
         </div>
       </div>
@@ -198,7 +201,7 @@
         <div class="is-four-fifths">
           <h2 class="title is-3">Video Summary</h2>
           <div class="publication-video">
-            <video id="summary" playsinline controls muted height="100%">
+            <video id="summary" playsinline controls height="100%">
               <source src="https://storage.googleapis.com/dm-tapnet/bootstap/bootstap_summary_trim2_1.mp4" type="video/mp4">
               <track label="English" kind="subtitles" srclang="en" src="bootstap_summary_trim2.vtt" default />
             </video>
