--- a/accv.html
+++ b/accv.html
@@ -182,13 +182,32 @@
     <div class="container is-max-desktop">
       <div class="is-centered has-text-centered">
         <div class="is-four-fifths">
-          <h2 class="title is-3">Join the Live Conversation</h2>
+          <h2 class="title is-3">Click and Join the Live Conversation</h2>
           <div class="content has-text-justified">
             <div style="text-align: center;">
               <a href="meet.google.com/jsx-iewq-nzc" target="_blank">
-                <img src="gvc.png" alt="google live conversation" style="width:100px;height:100px;">
+                <img src="gvc.png" alt="google live conversation" style="width:150px;height:150px;">
               </a>
+              <p>
+                15:45 pm - 17:45 pm (Vietnam Time)
+              </p>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section class="section">
+    <div class="container">
+      <div class="is-centered has-text-centered">
+        <div class="is-four-fifths">
+          <h2 class="title is-3">Video Summary</h2>
+          <div class="publication-video">
+            <video id="summary" controls autoplay loop style="width: 100%; height: auto;">
+              <source src="https://storage.googleapis.com/dm-tapnet/bootstap/bootstap_summary_trim2_1.mp4" type="video/mp4">
+              <track label="English" kind="subtitles" srclang="en" src="bootstap_summary_trim2.vtt" default />
+            </video>
           </div>
         </div>
       </div>
@@ -209,22 +228,6 @@
         </div>
       </div>
       <!--/ Abstract. -->
-    </div>
-  </section>
-
-  <section class="section">
-    <div class="container is-max-desktop">
-      <div class="is-centered has-text-centered">
-        <div class="is-four-fifths">
-          <h2 class="title is-3">Video Summary</h2>
-          <div class="publication-video">
-            <video id="summary" playsinline controls height="100%">
-              <source src="https://storage.googleapis.com/dm-tapnet/bootstap/bootstap_summary_trim2_1.mp4" type="video/mp4">
-              <track label="English" kind="subtitles" srclang="en" src="bootstap_summary_trim2.vtt" default />
-            </video>
-          </div>
-        </div>
-      </div>
     </div>
   </section>
 
