update gvc link

--- a/accv.html
+++ b/accv.html
@@ -185,7 +185,7 @@
           <h2 class="title is-3">Click and Join the Live Conversation</h2>
           <div class="content has-text-justified">
             <div style="text-align: center;">
-              <a href="meet.google.com/jsx-iewq-nzc" target="_blank">
+              <a href="meet.google.com/tcp-nzaf-wyz" target="_blank">
                 <img src="gvc.png" alt="google live conversation" style="width:150px;height:150px;">
               </a>
               <p>
