--- a/accv.html
+++ b/accv.html
@@ -69,151 +69,102 @@
     </div>
   </nav>
 
-  <section class="hero">
-    <div class="hero-body">
-      <div class="container is-max-desktop">
-        <div class="is-centered">
-          <div class="has-text-centered">
-            <h1 class="title is-1 publication-title">BootsTAP: Bootstrapped Training <br>for Tracking-Any-Point</h1>
-            <div class="is-size-5 publication-authors">
-              <span class="author-block">
-                <a href="http://www.carldoersch.com">Carl Doersch</a><sup>1</sup>,
-              </span>
-              <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=8qisprwAAAAJ">Pauline Luc</a><sup>1</sup>,
-              </span>
-              <span class="author-block">
-                <a href="https://yangyi02.github.io">Yi Yang</a><sup>1</sup>,
-              </span>
-              <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=cnbENAEAAAAJ">Dilara Gokay</a><sup>1</sup>,
-              </span>
-              <span class="author-block">
-                <a href="https://skoppula.com/">Skanda Koppula</a><sup>1</sup>,
-              </span>
-              <span class="author-block">
-                <a href="https://ankushgupta.org/">Ankush Gupta</a><sup>1</sup>,
-              </span>
-              <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=kbqjyGQAAAAJ">Joseph Heyward</a><sup>1</sup>,
-              </span>
-              <span class="author-block">
-                <a href="https://www.irocco.info/">Ignacio Rocco</a><sup>1</sup>,
-              </span>              
-              <span class="author-block">
-                <a href="https://goroshin.github.io/">Ross Goroshin</a><sup>1</sup>,
-              </span>
-              <span class="author-block">
-                <a href="https://joao.ai/">João Carreira</a><sup>1</sup>,
-              </span>
-              <span class="author-block">
-                <a href="https://www.robots.ox.ac.uk/~az/">Andrew Zisserman</a><sup>1,2</sup>
-              </span>
-            </div>
-
-            <div class="is-size-5 publication-authors">
-              <span class="author-block"><sup>1</sup>Google DeepMind,</span>
-              <span class="author-block"><sup>2</sup>University of Oxford</span>
-            </div>
-
-            <div class="has-text-centered">
-              <div class="publication-links">
-                <!-- PDF Link. -->
-                <span class="link-block">
-                  <a href="https://arxiv.org/pdf/2402.00847.pdf" class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
-                    </span>
-                    <span>Paper</span>
-                  </a>
-                </span>
-                <span class="link-block">
-                  <a href="https://arxiv.org/abs/2402.00847" class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="ai ai-arxiv"></i>
-                    </span>
-                    <span>arXiv</span>
-                  </a>
-                </span>
-                <span class="link-block">
-                  <a href="https://github.com/google-deepmind/tapnet?tab=readme-ov-file#download-checkpoints"
-                    class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="fab fa-github"></i>
-                    </span>
-                    <span>BootsTAP checkpoints</span>
-                  </a>
-                </span>
-                <span class="link-block">
-                  <a href="https://github.com/google-deepmind/tapnet?tab=readme-ov-file#colab-demo"
-                    class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="fab fa-github"></i>
-                    </span>
-                    <span>Colab Demos</span>
-                  </a>
-                </span> 
-              </div>
-            </div>
-          </div>
+  <section class="hero" style="padding: 1rem;">
+    <div class="hero-body" style="padding: 1rem;">
+      <div class="container" style="max-width: 100%; margin: 0 auto; text-align: center;">
+        <h1 class="title is-1 publication-title" style="font-size: 1.5rem; margin-bottom: 1rem;">BootsTAP: Bootstrapped Training <br>for Tracking-Any-Point</h1>
+        <div class="is-size-5 publication-authors" style="font-size: 0.875rem; margin-bottom: 1rem;">
+          <span class="author-block">
+            <a href="http://www.carldoersch.com">Carl Doersch</a><sup>1</sup>,
+          </span>
+          <span class="author-block">
+            <a href="https://scholar.google.com/citations?user=8qisprwAAAAJ">Pauline Luc</a><sup>1</sup>,
+          </span>
+          <span class="author-block">
+            <a href="https://yangyi02.github.io">Yi Yang</a><sup>1</sup>,
+          </span>
+          <span class="author-block">
+            <a href="https://scholar.google.com/citations?user=cnbENAEAAAAJ">Dilara Gokay</a><sup>1</sup>,
+          </span>
+          <span class="author-block">
+            <a href="https://skoppula.com/">Skanda Koppula</a><sup>1</sup>,
+          </span>
+          <span class="author-block">
+            <a href="https://ankushgupta.org/">Ankush Gupta</a><sup>1</sup>,
+          </span>
+          <span class="author-block">
+            <a href="https://scholar.google.com/citations?user=kbqjyGQAAAAJ">Joseph Heyward</a><sup>1</sup>,
+          </span>
+          <span class="author-block">
+            <a href="https://www.irocco.info/">Ignacio Rocco</a><sup>1</sup>,
+          </span>
+          <span class="author-block">
+            <a href="https://goroshin.github.io/">Ross Goroshin</a><sup>1</sup>,
+          </span>
+          <span class="author-block">
+            <a href="https://joao.ai/">João Carreira</a><sup>1</sup>,
+          </span>
+          <span class="author-block">
+            <a href="https://www.robots.ox.ac.uk/~az/">Andrew Zisserman</a><sup>1,2</sup>
+          </span>
         </div>
-      </div>
-    </div>
-  </section>
-
-  <!--
-  <section class="hero teaser">
-    <div class="container is-max-desktop">
-      <div class="hero-body">
-        <div class="is-three-quarters" style="display:block; margin: auto;">
-          <div class="publication-video" >
-            <video id="teaser" controls loop playsinline height="100%">
-              <source src="https://storage.googleapis.com/dm-tapnet/bootstap/bootstap_summary_trim2.mkv" type="video/mp4">
-              <track label="English" kind="subtitles" srclang="en" src="bootstap_summary_trim2.vtt" default />
-            </video>
-          </div>
+        <div class="is-size-5 publication-authors" style="font-size: 0.875rem; margin-bottom: 1rem;">
+          <span class="author-block"><sup>1</sup>Google DeepMind,</span>
+          <span class="author-block"><sup>2</sup>University of Oxford</span>
+          <p>
+            <img src="accv/ACCV-Hanoi-Logo_Dk-Blue-1024x226.jpg" style="width: 20%; height: auto; border-radius: 8px; margin-right: 10px;">
+            <img src="accv/google-deep-mind-logo.jpg" style="width: 20%; height: auto; border-radius: 8px; margin-right: 10px;">
+            <img src="accv/University_of_Oxford.svg.png" style="width: 20%; height: auto; border-radius: 8px;">
+          </p>
         </div>
-      </div>
-    </div>
-  </section>
-  -->
-
-  <section class="section">
-    <div class="container is-max-desktop">
-      <div class="is-centered has-text-centered">
-        <div class="is-four-fifths">
-          <h2 class="title is-3">Click and Join the Live Conversation</h2>
-          <div class="content has-text-justified">
-            <div style="text-align: center;">
-              <a href="meet.google.com/tcp-nzaf-wyz" target="_blank">
-                <img src="gvc.png" alt="google live conversation" style="width:150px;height:150px;">
-              </a>
-              <p>
-                15:45 pm - 17:45 pm (Vietnam Time)
-              </p>
-            </div>
-          </div>
+        <div class="publication-links" style="margin-bottom: 1rem;">
+          <span class="link-block" style="margin: 0.5rem;">
+            <a href="https://arxiv.org/pdf/2402.00847.pdf" class="external-link button is-normal is-rounded is-dark" style="font-size: 0.875rem; padding: 0.5rem 1rem; text-decoration: none; background-color: #000; color: #fff; border-radius: 12px;">
+              <span>Paper</span>
+            </a>
+          </span>
+          <span class="link-block" style="margin: 0.5rem;">
+            <a href="https://arxiv.org/abs/2402.00847" class="external-link button is-normal is-rounded is-dark" style="font-size: 0.875rem; padding: 0.5rem 1rem; text-decoration: none; background-color: #000; color: #fff; border-radius: 12px;">
+              <span>arXiv</span>
+            </a>
+          </span>
+          <span class="link-block" style="margin: 0.5rem;">
+            <a href="https://github.com/google-deepmind/tapnet?tab=readme-ov-file#download-checkpoints" class="external-link button is-normal is-rounded is-dark" style="font-size: 0.875rem; padding: 0.5rem 1rem; text-decoration: none; background-color: #000; color: #fff; border-radius: 12px;">
+              <span>BootsTAP checkpoints</span>
+            </a>
+          </span>
+          <span class="link-block" style="margin: 0.5rem;">
+            <a href="https://github.com/google-deepmind/tapnet?tab=readme-ov-file#colab-demo" class="external-link button is-normal is-rounded is-dark" style="font-size: 0.875rem; padding: 0.5rem 1rem; text-decoration: none; background-color: #000; color: #fff; border-radius: 12px;">
+              <span>Colab Demos</span>
+            </a>
+          </span>
         </div>
       </div>
     </div>
   </section>
   
-  <section class="section">
-    <div class="container">
-      <div class="is-centered has-text-centered">
-        <div class="is-four-fifths">
-          <h2 class="title is-3">Video Summary</h2>
-          <div class="publication-video">
-            <video id="summary" controls autoplay loop style="width: 100%; height: auto;">
-              <source src="https://storage.googleapis.com/dm-tapnet/bootstap/bootstap_summary_trim2_1.mp4" type="video/mp4">
-              <track label="English" kind="subtitles" srclang="en" src="bootstap_summary_trim2.vtt" default />
-            </video>
-          </div>
-        </div>
+  <section class="section" style="padding: 1rem;">
+    <div class="container" style="max-width: 100%; margin: 0 auto; text-align: center;">
+      <h2 class="title is-3" style="font-size: 1.5rem; margin-bottom: 1rem;">Video Summary</h2>
+      <div class="publication-video" style="margin: 0 auto;">
+        <video id="summary" autoplay muted loop playsinline controls style="width: 100%; height: auto; border: 1px solid #ddd; border-radius: 8px;">
+          <source src="https://storage.googleapis.com/dm-tapnet/bootstap/bootstap_summary_trim2_1.mp4" type="video/mp4">
+          <track label="English" kind="subtitles" srclang="en" src="bootstap_summary_trim2.vtt" default />
+          Your browser does not support the video tag.
+        </video>
       </div>
     </div>
   </section>
-
+  
+  <section class="section" style="padding: 1rem;">
+    <div class="container" style="max-width: 100%; margin: 0 auto; text-align: center;">
+      <h2 class="title is-3" style="font-size: 1.5rem; margin-bottom: 1rem;">Click and Join the Live Discussion 15:45 pm - 17:45 pm (Vietnam Time)</h2>
+      <a href="meet.google.com/tcp-nzaf-wyz" target="_blank" style="display: inline-block; margin-bottom: 1rem;">
+        <img src="accv/google_meet.png" alt="google live conversation" style="width: 80%; height: auto; border-radius: 8px;">
+      </a>
+    </div>
+  </section>
+  
   <section class="section">
     <div class="container is-max-desktop">
       <!-- Abstract. -->
