--- a/accv.html
+++ b/accv.html
@@ -72,8 +72,8 @@
   <section class="hero" style="padding: 0.5rem;">
     <div class="hero-body" style="padding: 0.5rem;">
       <div class="container" style="max-width: 100%; margin: 0 auto; text-align: center;">
-        <h1 class="title is-1 publication-title" style="font-size: 1.5rem; margin-bottom: 0.5rem;">BootsTAP: Bootstrapped Training for Tracking-Any-Point</h1>
-        <div class="is-size-5 publication-authors" style="font-size: 0.4rem; margin-bottom: 0.5rem;">
+        <h1 class="title is-1 publication-title" style="font-size: 1.2rem; margin-bottom: 0.5rem;">BootsTAP: Bootstrapped Training for Tracking-Any-Point</h1>
+        <div class="is-size-5 publication-authors" style="font-size: 0.3rem; margin-bottom: 0.5rem;">
           <span class="author-block">
             <a href="http://www.carldoersch.com">Carl Doersch</a>,
           </span>
@@ -119,11 +119,11 @@
               <span>Paper</span>
             </a>
           </span>
-          <span class="link-block" style="margin: 0.25rem;">
+          <!-- <span class="link-block" style="margin: 0.25rem;">
             <a href="https://arxiv.org/abs/2402.00847" class="external-link button is-normal is-rounded is-dark" style="font-size: 0.875rem; padding: 0.5rem 1rem; text-decoration: none; background-color: #000; color: #fff; border-radius: 12px;">
               <span>arXiv</span>
             </a>
-          </span>
+          </span> -->
           <span class="link-block" style="margin: 0.25rem;">
             <a href="https://bootstap.github.io" class="external-link button is-normal is-rounded is-dark" style="font-size: 0.875rem; padding: 0.5rem 1rem; text-decoration: none; background-color: #000; color: #fff; border-radius: 12px;">
               <span>Website</span>
