--- a/accv.html
+++ b/accv.html
@@ -71,71 +71,66 @@
 
   <section class="hero" style="padding: 0.1rem;">
     <div class="hero-body" style="padding: 0.5rem;">
-      <div class="container" style="max-width: 100%; margin: 0 auto; text-align: center;">
-        <h1 class="title is-1 publication-title" style="font-size: 1.4rem; margin-bottom: 0.5rem;">BootsTAP: Bootstrapped Training for Tracking-Any-Point</h1>
-        <div class="is-size-5 publication-authors" style="font-size: 0.3rem; margin-bottom: 0.5rem;">
-          <span class="author-block">
-            <a href="http://www.carldoersch.com">Carl Doersch</a>,
-          </span>
-          <span class="author-block">
-            <a href="https://scholar.google.com/citations?user=8qisprwAAAAJ">Pauline Luc</a>,
-          </span>
-          <span class="author-block">
-            <a href="https://yangyi02.github.io">Yi Yang</a>,
-          </span>
-          <span class="author-block">
-            <a href="https://scholar.google.com/citations?user=cnbENAEAAAAJ">Dilara Gokay</a>,
-          </span>
-          <span class="author-block">
-            <a href="https://skoppula.com/">Skanda Koppula</a>,
-          </span>
-          <span class="author-block">
-            <a href="https://ankushgupta.org/">Ankush Gupta</a>,
-          </span>
-          <span class="author-block">
-            <a href="https://scholar.google.com/citations?user=kbqjyGQAAAAJ">Joseph Heyward</a>,
-          </span>
-          <span class="author-block">
-            <a href="https://www.irocco.info/">Ignacio Rocco</a>,
-          </span>
-          <span class="author-block">
-            <a href="https://goroshin.github.io/">Ross Goroshin</a>,
-          </span>
-          <span class="author-block">
-            <a href="https://joao.ai/">João Carreira</a>,
-          </span>
-          <span class="author-block">
-            <a href="https://www.robots.ox.ac.uk/~az/">Andrew Zisserman</a>
-          </span>
+        <div class="container" style="max-width: 100%; margin: 0 auto; text-align: center;">
+            <h1 class="title is-1 publication-title" style="font-size: 1.4rem; margin-bottom: 0.5rem;">BootsTAP: Bootstrapped Training for Tracking-Any-Point</h1>
+            <div class="is-size-5 publication-authors" style="font-size: 1.0rem; margin-bottom: 0.5rem;">
+                <span class="author-block" style="font-size: 1.0rem; margin-bottom: 0.5rem;">
+                    <a href="http://www.carldoersch.com">Carl Doersch</a>,
+                </span>
+                <span class="author-block" style="font-size: 1.0rem; margin-bottom: 0.5rem;">
+                    <a href="https://scholar.google.com/citations?user=8qisprwAAAAJ">Pauline Luc</a>,
+                </span>
+                <span class="author-block" style="font-size: 1.0rem; margin-bottom: 0.5rem;">
+                    <a href="https://yangyi02.github.io">Yi Yang</a>,
+                </span>
+                <span class="author-block" style="font-size: 1.0rem; margin-bottom: 0.5rem;">
+                    <a href="https://scholar.google.com/citations?user=cnbENAEAAAAJ">Dilara Gokay</a>,
+                </span>
+                <span class="author-block" style="font-size: 1.0rem; margin-bottom: 0.5rem;">
+                    <a href="https://skoppula.com/">Skanda Koppula</a>,
+                </span>
+                <span class="author-block" style="font-size: 1.0rem; margin-bottom: 0.5rem;">
+                    <a href="https://ankushgupta.org/">Ankush Gupta</a>,
+                </span>
+                <span class="author-block" style="font-size: 1.0rem; margin-bottom: 0.5rem;">
+                    <a href="https://scholar.google.com/citations?user=kbqjyGQAAAAJ">Joseph Heyward</a>,
+                </span>
+                <span class="author-block" style="font-size: 1.0rem; margin-bottom: 0.5rem;">
+                    <a href="https://www.irocco.info/">Ignacio Rocco</a>,
+                </span>
+                <span class="author-block" style="font-size: 1.0rem; margin-bottom: 0.5rem;">
+                    <a href="https://goroshin.github.io/">Ross Goroshin</a>,
+                </span>
+                <span class="author-block" style="font-size: 1.0rem; margin-bottom: 0.5rem;">
+                    <a href="https://joao.ai/">João Carreira</a>,
+                </span>
+                <span class="author-block" style="font-size: 1.0rem; margin-bottom: 0.5rem;">
+                    <a href="https://www.robots.ox.ac.uk/~az/">Andrew Zisserman</a>
+                </span>
+            </div>
+            <div class="is-size-5 publication-authors" style="font-size: 0.875rem; margin-bottom: 0.5rem;">
+                <img src="accv/ACCV-Hanoi-Logo_Dk-Blue-1024x226.jpg" style="width: 20%; height: auto; border-radius: 8px; margin-right: 10px;">
+                <img src="accv/google-deep-mind-logo.jpg" style="width: 20%; height: auto; border-radius: 8px; margin-right: 10px;">
+                <img src="accv/University_of_Oxford.svg.png" style="width: 20%; height: auto; border-radius: 8px;">
+            </div>
+            <div class="publication-links" style="margin-bottom: 0.5rem;">
+                <span class="link-block" style="margin: 0.25rem;">
+                    <a href="https://openaccess.thecvf.com/content/ACCV2024/papers/Doersch_BootsTAP_Bootstrapped_Training_for_Tracking-Any-Point_ACCV_2024_paper.pdf" class="external-link button is-normal is-rounded is-dark" style="font-size: 0.875rem; padding: 0.5rem 1rem; text-decoration: none; background-color: #000; color: #fff; border-radius: 12px;">
+                        <span>Paper</span>
+                    </a>
+                </span>
+                <span class="link-block" style="margin: 0.25rem;">
+                    <a href="https://bootstap.github.io" class="external-link button is-normal is-rounded is-dark" style="font-size: 0.875rem; padding: 0.5rem 1rem; text-decoration: none; background-color: #000; color: #fff; border-radius: 12px;">
+                        <span>Website</span>
+                    </a>
+                </span>
+                <span class="link-block" style="margin: 0.25rem;">
+                    <a href="https://github.com/google-deepmind/tapnet?tab=readme-ov-file#colab-demo" class="external-link button is-normal is-rounded is-dark" style="font-size: 0.875rem; padding: 0.5rem 1rem; text-decoration: none; background-color: #000; color: #fff; border-radius: 12px;">
+                        <span>Colab Demos</span>
+                    </a>
+                </span>
+            </div>
         </div>
-        <div class="is-size-5 publication-authors" style="font-size: 0.875rem; margin-bottom: 0.5rem;">
-          <img src="accv/ACCV-Hanoi-Logo_Dk-Blue-1024x226.jpg" style="width: 20%; height: auto; border-radius: 8px; margin-right: 10px;">
-          <img src="accv/google-deep-mind-logo.jpg" style="width: 20%; height: auto; border-radius: 8px; margin-right: 10px;">
-          <img src="accv/University_of_Oxford.svg.png" style="width: 20%; height: auto; border-radius: 8px;">
-        </div>
-        <div class="publication-links" style="margin-bottom: 0.5rem;">
-          <span class="link-block" style="margin: 0.25rem;">
-            <a href="https://openaccess.thecvf.com/content/ACCV2024/papers/Doersch_BootsTAP_Bootstrapped_Training_for_Tracking-Any-Point_ACCV_2024_paper.pdf" class="external-link button is-normal is-rounded is-dark" style="font-size: 0.875rem; padding: 0.5rem 1rem; text-decoration: none; background-color: #000; color: #fff; border-radius: 12px;">
-              <span>Paper</span>
-            </a>
-          </span>
-          <!-- <span class="link-block" style="margin: 0.25rem;">
-            <a href="https://arxiv.org/abs/2402.00847" class="external-link button is-normal is-rounded is-dark" style="font-size: 0.875rem; padding: 0.5rem 1rem; text-decoration: none; background-color: #000; color: #fff; border-radius: 12px;">
-              <span>arXiv</span>
-            </a>
-          </span> -->
-          <span class="link-block" style="margin: 0.25rem;">
-            <a href="https://bootstap.github.io" class="external-link button is-normal is-rounded is-dark" style="font-size: 0.875rem; padding: 0.5rem 1rem; text-decoration: none; background-color: #000; color: #fff; border-radius: 12px;">
-              <span>Website</span>
-            </a>
-          </span>
-          <span class="link-block" style="margin: 0.25rem;">
-            <a href="https://github.com/google-deepmind/tapnet?tab=readme-ov-file#colab-demo" class="external-link button is-normal is-rounded is-dark" style="font-size: 0.875rem; padding: 0.5rem 1rem; text-decoration: none; background-color: #000; color: #fff; border-radius: 12px;">
-              <span>Colab Demos</span>
-            </a>
-          </span>
-        </div>
-      </div>
     </div>
   </section>
   
