--- a/accv.html
+++ b/accv.html
@@ -69,7 +69,7 @@
     </div>
   </nav>
 
-  <section class="hero" style="padding: 0.1rem;">
+  <section class="hero" style="padding: 0.1rem 0;">
     <div class="hero-body" style="padding: 0.5rem;">
         <div class="container" style="max-width: 100%; margin: 0 auto; text-align: center;">
             <h1 class="title is-1 publication-title" style="font-size: 1.4rem; margin-bottom: 0.5rem;">BootsTAP: Bootstrapped Training for Tracking-Any-Point</h1>
@@ -134,7 +134,7 @@
     </div>
   </section>
   
-  <section class="section" style="padding: 0.1rem;">
+  <section class="section" style="padding: 0.1rem 0; margin-top: 0;">
     <div class="container" style="max-width: 100%; margin: 0 auto; text-align: center;">
       <h2 class="title is-3" style="font-size: 1.2rem; margin-bottom: 0.5rem;">Click and Join the Live Discussion 
         <a href="https://meet.google.com/tcp-nzaf-wyz" target="_blank" style="display: inline-block; margin-bottom: 0.5rem;">
