--- a/accv.html
+++ b/accv.html
@@ -136,10 +136,14 @@
   
   <section class="section" style="padding: 0.1rem 0; margin-top: 0;">
     <div class="container" style="max-width: 100%; margin: 0 auto; text-align: center;">
-      <h2 class="title is-3" style="font-size: 1.2rem; margin-bottom: 0.5rem;">Click and Join the Live Discussion 
-        <a href="https://meet.google.com/tcp-nzaf-wyz" target="_blank" style="display: inline-block; margin-bottom: 0.5rem;">
-          <img src="accv/google_meet.png" alt="google live discussion" style="width: 10%; height: auto;">
-        </a> 15:45 pm - 17:45 pm (Vietnam Time)</h2>
+      <h2 class="title is-3" style="font-size: 1.2rem; margin-bottom: 0.5rem;">Click and Join the Live Discussion
+        <p>
+          <a href="https://meet.google.com/tcp-nzaf-wyz" target="_blank" style="display: inline-block; margin-bottom: 0.5rem;">
+            <img src="accv/google_meet.png" alt="google live discussion" style="width: 10%; height: auto;">
+          </a>
+        </p>
+        <p>15:45 pm - 17:45 pm (Vietnam Time)</p>
+      </h2>  
       <div class="publication-video" style="margin: 0 auto;">
         <video id="summary" autoplay muted loop playsinline controls style="width: 100%; height: auto; border: 1px solid #ddd; border-radius: 8px;">
           <source src="https://storage.googleapis.com/dm-tapnet/bootstap/bootstap_summary_trim2_1.mp4" type="video/mp4">
