--- a/index.html
+++ b/index.html
@@ -921,12 +921,15 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@article{doersch2024bootstap,
-    author    = {Carl Doersch and Pauline Luc and Yi Yang and Dilara Gokay and Skanda Koppula and Ankush Gupta and Joseph Heyward and Ignacio Rocco and Ross Goroshin and Jo&atilde;o Carreira and Andrew Zisserman},
-    title     = {{BootsTAP}: Bootstrapped Training for Tracking Any Point},
-    journal   = {arXiv},
-    year      = {2024},
-  }</code></pre>
+        <pre><code>
+          @inproceedings{doersch2024bootstap,
+            title={Bootstap: Bootstrapped training for tracking-any-point},
+            author={Doersch, Carl and Luc, Pauline and Yang, Yi and Gokay, Dilara and Koppula, Skanda and Gupta, Ankush and Heyward, Joseph and Rocco, Ignacio and Goroshin, Ross and Carreira, Jo{\~a}o and Zisserman, Andrew},
+            booktitle={Proceedings of the Asian Conference on Computer Vision},
+            pages={3257--3274},
+            year={2024}
+          }
+        </code></pre>
     </div>
   </section>
   <footer class="footer">
