--- a/index.html
+++ b/index.html
@@ -918,20 +918,18 @@
       </div>
     </div>
   </section>
-  <section class="section" id="BibTeX">
+  <!--   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-        <pre><code>
-          @inproceedings{doersch2024bootstap,
-            title={Bootstap: Bootstrapped training for tracking-any-point},
-            author={Doersch, Carl and Luc, Pauline and Yang, Yi and Gokay, Dilara and Koppula, Skanda and Gupta, Ankush and Heyward, Joseph and Rocco, Ignacio and Goroshin, Ross and Carreira, Jo{\~a}o and Zisserman, Andrew},
-            booktitle={Proceedings of the Asian Conference on Computer Vision},
-            pages={3257--3274},
-            year={2024}
-          }
-        </code></pre>
+        <pre><code>@inproceedings{doersch2024bootstap,
+          title={Bootstap: Bootstrapped training for tracking-any-point},
+          author={Doersch, Carl and Luc, Pauline and Yang, Yi and Gokay, Dilara and Koppula, Skanda and Gupta, Ankush and Heyward, Joseph and Rocco, Ignacio and Goroshin, Ross and Carreira, Jo{\~a}o and Zisserman, Andrew},
+          booktitle={Proceedings of the Asian Conference on Computer Vision},
+          pages={3257--3274},
+          year={2024}
+        }</code></pre>
     </div>
-  </section>
+  </section> -->
   <footer class="footer">
     <div class="container">
       <div class="is-centered">
